[gd_scene load_steps=3 format=3 uid="uid://2ysj36v7ruon"]

[ext_resource type="Script" path="res://scripts/login.gd" id="1_4rhoe"]
[ext_resource type="LabelSettings" uid="uid://jfhijl2ucmeq" path="res://assets/label_settings.tres" id="2_hmd01"]

[node name="Login" type="CanvasLayer"]
script = ExtResource("1_4rhoe")
scene_after_login = "menu"

[node name="LoginBox" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -458.0
offset_top = -226.0
offset_right = 459.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.277528, 0.277528, 0.277528, 1)

[node name="Title" type="Label" parent="LoginBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 114.0
grow_horizontal = 2
text = "Login with C4E"
label_settings = ExtResource("2_hmd01")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EMail" type="LineEdit" parent="LoginBox"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.5
offset_top = -53.0
offset_right = 1.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../Password")
theme_override_font_sizes/font_size = 30
placeholder_text = "e-mail or username"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
clear_button_enabled = true
flat = true

[node name="Password" type="LineEdit" parent="LoginBox"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 11.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../Login")
focus_previous = NodePath("../EMail")
theme_override_font_sizes/font_size = 30
placeholder_text = "password"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
clear_button_enabled = true
drag_and_drop_selection_enabled = false
flat = true
select_all_on_focus = true
secret = true

[node name="Login" type="Button" parent="LoginBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -97.5
offset_top = -82.0
offset_right = 97.5
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
focus_previous = NodePath("../Password")
theme_override_font_sizes/font_size = 40
disabled = true
text = "Login ->"

[connection signal="text_changed" from="LoginBox/EMail" to="." method="on_email_text_changed"]
[connection signal="text_changed" from="LoginBox/Password" to="." method="on_password_text_changed"]
[connection signal="pressed" from="LoginBox/Login" to="." method="on_login_button_pressed"]
